<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/color_back">
    <include layout="@layout/toolbar_default"
        android:id="@+id/toolbar_default">
    </include>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_todo"
        android:id="@+id/string_todo"
        android:textSize="25sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/string_hint_todo"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/input_todo"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_save"
        android:id="@+id/button_save"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/color_blue"/>
</LinearLayout>
</layout>